--- a/assets/style.css
+++ b/assets/style.css
@@ -2,22 +2,42 @@ body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 .mainTable {
+  margin-inline: auto;
+  width: 70%;
+  text-align: center;
   background-color: #02da80;
   color: #000000;
   border-radius: 8px;
   border: 5px solid #0c0b1d;
   margin-bottom: 2rem;
 }
+.playerTable {
+  background-color: #02da80;
+  color: #000000;
+  border-radius: 8px;
+  border: 5px solid #0c0b1d;
+  margin-top: 2rem;
+  width: 70%;
+  text-align: center;
+  margin-inline: auto;
+}
+
 .cellNum {
   width: 5%;
   display: inline-block;
-  min-height: 30px;
+  min-height: 10px;
   text-align: center;
   padding-block: 2.5rem;
   border: 1px solid black;
   border-radius: 8px;
   user-select: none;
   cursor: pointer;
+}
+h1 {
+  text-align: center;
+  font-size: 3em;
+  margin-bottom: 1rem;
+  font-weight: 600;
 }
 h3 {
   margin: 0;
